fix: (ChampSpells) too much request

--- a/src/components/Champ/ChampSpells.scss
+++ b/src/components/Champ/ChampSpells.scss
@@ -127,7 +127,8 @@
     }
 
     physicaldamage {
-        color: Orange
+        color: Orange;
+        opacity: 0.8;
     }
 
     lifesteal {
